clusters/cl01tl/manifests/gitea/TCPRoute-gitea.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations:
    external-dns.kubernetes.io/hostname: gitea-ssh.alexlebens.dev
  labels:
    helm.sh/chart: gitea-12.7.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/version: "1.27.3"
    version: "1.27.3"
    app.kubernetes.io/managed-by: Helm
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-ssh-gateway
      namespace: kube-system
      sectionName: ssh
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gitea-ssh
          port: 22
          weight: 1
